[package]
name = "radio-sx1231"
description = "Rust driver for the Semtec SX1231 Sub GHZ (G)FSK/OOK Radio ICs"
version = "0.1.0"
authors = ["Erik Henriksson <erikhenrikssn@gmail.com>"]
repository = "https://github.com/henrikssn/rust-radio-sx1231"
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "structopt", "linux-embedded-hal", "simplelog", "humantime", "bitbang-hal", "shared-bus", "nb", "void" ]
default = []

defmt-default = ["defmt"]
defmt-trace = ["defmt"]
defmt-debug = ["defmt"]
defmt-info = ["defmt"]
defmt-warn = ["defmt"]
defmt-error = ["defmt"]

[dependencies]
libc = { version = "0.2", optional = true }
radio = "0.10"
embedded-hal = { version = "0.2.4", features = ["unproven"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

structopt = { version = "0.3", optional = true }
linux-embedded-hal = { version = "0.3.0", optional = true }
simplelog = { version = "0.10", optional = true }
humantime = { version = "2.0", optional = true }
shared-bus = { version = "0.2.0", features = ["std"], optional = true }
bitbang-hal = { version = "0.3.2", optional = true }
modular-bitfield = "0.11.0"
nb = {version = "1", optional = true}
void = {version = "1", optional = true}

defmt = { version = "0.3", optional = true}
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
color-backtrace = "0.5.1"

[[bin]]
name = "sx1231-util"
path = "src/util/main.rs"
required-features = ["util"]

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["util"]